--- a/src/main/webapp/template/employee.html
+++ b/src/main/webapp/template/employee.html
@@ -40,7 +40,6 @@
       <h3>Dashboard</h3>
     </div>
     <div class="profile_img" id="profile_img">
-      <!-- <img src='assets/icons/profile.png' /> -->
       A
     </div>
   </header>
@@ -48,7 +47,6 @@
     <nav class="nav">
       <div>
         <a href="employee" class="nav_logo">
-          <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
           <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
           <span class="nav_logo-name">
             Projects
@@ -86,7 +84,7 @@
 
     <!-- ======================= Cards ================== -->
     <div class="cardBox col-lg-10">
-      <a href="admin_projects">
+      <a href="employee_projects">
         <div class="card">
           <div>
             <div class="numbers" id="projects">4</div>
@@ -99,7 +97,7 @@
         </div>
       </a>
 
-      <a href="admin_tasks">
+      <a href="employee_tasks">
 
         <div class="card">
           <div>
@@ -113,7 +111,7 @@
         </div>
       </a>
 
-      <a href="admin_tasks">
+      <a href="employee_tasks">
         <div class="card">
           <div>
             <div class="numbers" id="opentasks">4</div>
