--- a/src/main/webapp/template/manager_tasks.html
+++ b/src/main/webapp/template/manager_tasks.html
@@ -4,20 +4,21 @@
 <head>
   <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/checkuser.js"></script>
-  <link rel="stylesheet" href="assets/css/toast.css" />
-  <link rel="stylesheet" href="assets/css/floatButton.css" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Dashboard - Tasks</title>
+  <title>Manager Dashboard - Tasks</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/toast.css" />
+  <link rel="stylesheet" href="assets/css/loader.css" />
+  <link rel="stylesheet" href="assets/css/floatButton.css" />
   <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
   <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css" />
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 
@@ -37,7 +38,7 @@
   <header class="header" id="header">
     <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
     <div>
-      <h3>Dashboard</h3>
+      <h3>Tasks</h3>
     </div>
     <div class="profile_img" id="profile_img">
       A
@@ -46,22 +47,25 @@
   <div class="l-navbar" id="nav-bar">
     <nav class="nav">
       <div>
-        <a href="admin" class="nav_logo">
+        <a href="manager" class="nav_logo">
           <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
           <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
           <span class="nav_logo-name">
             Projects
           </span>
         </a>
-        <div class="nav_list"> <a href="admin" class="nav_link">
+        <div class="nav_list"> <a href="manager" class="nav_link">
             <i class='bx bx-grid-alt nav_icon'></i>
             <span class="nav_name">Dashboard</span>
           </a>
-          <a href="admin_projects" class="nav_link">
+          <a href="manager_users" class="nav_link">
+            <i class='bx bx-user nav_icon'></i>
+            <span class="nav_name">Users</span> </a>
+          <a href="manager_projects" class="nav_link">
             <i class='bx bx-briefcase nav_icon'></i>
             <span class="nav_name">Projects</span>
           </a>
-          <a href="admin_tasks" class="nav_link active">
+          <a href="manager_tasks" class="nav_link active">
             <i class='bx bx-task nav_icon'></i>
             <span class="nav_name">Tasks</span>
           </a>
@@ -116,7 +120,7 @@
         <div class="row">
           <div class="col-md-6 mb-3">
             <div class="form-floating">
-              <select class="form-select" id="eassignee" aria-label="Select assignee" disabled>
+              <select class="form-select" id="eassignee" aria-label="Select assignee">
 
               </select>
               <label for="floatingSelectGrid">Assigned Name</label>
@@ -138,13 +142,13 @@
         <div class="row">
           <div class="col-md-6 mb-3">
             <div class="form-floating input-group date">
-              <input class="form-control" type="date" id="estartDate" disabled>
+              <input class="form-control" type="date" id="estartDate">
               <label for="estartDate">Start date</label>
             </div>
           </div>
           <div class="col-md-6 mb-3">
             <div class="form-floating input-group date">
-              <input class="form-control" type="date" id="dueDate" disabled>
+              <input class="form-control" type="date" id="dueDate">
               <label for="dueDate">Due date</label>
             </div>
           </div>
@@ -159,6 +163,7 @@
 
         <div class="mt-3 mb-3">
           <button type="button" id="eBtn" class="btn btn-success">Save</button>
+          <button type="button" id="deleteBtn" class="btn btn-danger">Delete</button>
           <button type="button" onclick="resetTableEdit()" class="btn btn-primary">Close</button>
         </div>
     </div>
@@ -208,8 +213,8 @@
               <div class="mb-3 col-md-6">
                 <label for="priority">Assignee</label>
                 <br />
-                <select class="form-control form-two" id="assignee" name="assignee" aria-label=".form-select-lg example"
-                  disabled>
+                <select class="form-control form-two" id="assignee" name="assignee"
+                  aria-label=".form-select-lg example">
                   <!-- Filled by JS -->
                 </select>
               </div>
@@ -238,7 +243,30 @@
     </div>
   </div>
   <!-- Modal end -->
+  <!-- Confirm Modal -->
+  <div id="deleteModal" class="modal fade">
+    <div class="modal-dialog modal-confirm">
+      <div class="modal-content">
+        <div class="modal-header flex-column">
+          <div class="icon-box">
+            <i class="fas fa-times-circle"></i>
+          </div>
+          <h4 class="modal-title w-100">Are you sure?</h4>
+        </div>
+        <form id="delete-task" name="delete-task">
 
+          <div class="modal-body">
+            <p>Do you really want to delete these records? This process cannot be undone.</p>
+          </div>
+
+          <div class="modal-footer justify-content-center">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
   <div class="floating-container">
     <div class="floating-button" id="createBtn" data-toggle="modal" data-target="#formModal">
       +
@@ -247,9 +275,10 @@
   <script src="assets/js/toast.js"></script>
   <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+  <script src="assets/js/api_utility.js"></script>
+  <script src="assets/js/mtasks.js"></script>
   <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
   <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
-  <script src="assets/js/api_utility.js"></script>
-  <script src="assets/js/etasks.js"></script>
+</body>
 
 </html>
