--- a/src/main/webapp/template/employee_tasks.html
+++ b/src/main/webapp/template/employee_tasks.html
@@ -125,7 +125,7 @@
           </div>
           <div class="col-md-6 mb-3">
             <div class="form-floating">
-              <select class="form-select" id="epriority" aria-label="Select priority">
+              <select class="form-select" id="epriority" aria-label="Select priority" disabled>
                 <option value="low">Low</option>
                 <option value="medium">Medium</option>
                 <option value="high">High</option>
