--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -134,7 +134,7 @@
 
     <!-- Add project Modal -->
     <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="addModal" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable" role="document">
+        <div class="modal-dialog  modal-dialog-centered modal-dialog-scrollable" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="addModalLabel">Add Project</h5>
@@ -187,7 +187,7 @@
     <!-- Edit Modal -->
     <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable" role="document">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="editModalLabel">Edit Project</h5>
@@ -236,7 +236,7 @@
     <!-- Modal end -->
     <!-- Confirm Modal -->
     <div id="deleteModal" class="modal fade">
-        <div class="modal-dialog modal-confirm">
+        <div class="modal-dialog modal-dialog-centered modal-confirm">
             <div class="modal-content">
                 <div class="modal-header flex-column">
                     <div class="icon-box">
