--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -44,6 +44,6 @@
 </body>
 <script src="assets/js/validator.js"></script>
 <script src="assets/js/jquery/jquery.min.js"></script>
-<script src="assets/js/login.js"></script>
+<script src="assets/js/authentication.js"></script>
 
 </html>
