--- a/src/main/webapp/template/manager_tasks.html
+++ b/src/main/webapp/template/manager_tasks.html
@@ -175,7 +175,7 @@
   <!-- Modal -->
   <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel"
     aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="formModalLabel">Create Task</h5>
@@ -245,7 +245,7 @@
   <!-- Modal end -->
   <!-- Confirm Modal -->
   <div id="deleteModal" class="modal fade">
-    <div class="modal-dialog modal-confirm">
+    <div class="modal-dialog modal-dialog-centered modal-confirm">
       <div class="modal-content">
         <div class="modal-header flex-column">
           <div class="icon-box">
