--- a/src/main/webapp/template/employee_tasks.html
+++ b/src/main/webapp/template/employee_tasks.html
@@ -171,7 +171,7 @@
   <!-- Modal -->
   <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel"
     aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="formModalLabel">Create Task</h5>
