Manager user added sidebar separated

--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -178,6 +178,7 @@
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
 
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+    <script src="assets/js/sidebar.js"></script>
     <script src="assets/js/toast.js"></script>
     <script src="assets/js/admin.js"></script>
 </body>
