--- a/src/main/webapp/template/manager.html
+++ b/src/main/webapp/template/manager.html
@@ -57,6 +57,9 @@
             <i class='bx bx-grid-alt nav_icon'></i>
             <span class="nav_name">Dashboard</span>
           </a>
+          <a href="manager_users" class="nav_link">
+            <i class='bx bx-user nav_icon'></i>
+            <span class="nav_name">Users</span> </a>
           <a href="manager_projects" class="nav_link">
             <i class='bx bx-briefcase nav_icon'></i>
             <span class="nav_name">Projects</span>
@@ -161,5 +164,6 @@
 <script src="assets/js/employee.js"></script>
 <script src="assets/js/jquery/jquery.min.js"></script>
 <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+<script src="assets/js/sidebar.js"></script>
 
 </html>
