--- a/src/main/webapp/template/manager_users.html
+++ b/src/main/webapp/template/manager_users.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
-    <title>Admin Dashboard - Users</title>
+    <title>Manager Dashboard - Users</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/loader.css" />
     <link rel="stylesheet" href="assets/css/floatButton.css" />
@@ -50,7 +50,7 @@
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
             <div>
-                <a href="admin" class="nav_logo">
+                <a href="manager" class="nav_logo">
                     <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
                     <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
                     <span class="nav_logo-name">
@@ -58,19 +58,18 @@
                     </span>
                 </a>
                 <div class="nav_list">
-                    <a href="admin" class="nav_link">
+                    <a href="manager" class="nav_link">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
-                    <a href="admin_users" class="nav_link active">
+                    <a href="manager_users" class="nav_link active">
                         <i class='bx bx-user nav_icon'></i>
                         <span class="nav_name">Users</span> </a>
-                    <a href="admin_projects" class="nav_link">
-                        <!-- <i class='fa-solid fa-diagram-project nav_icon'></i> -->
+                    <a href="manager_projects" class="nav_link">
                         <i class='bx bx-briefcase nav_icon'></i>
                         <span class="nav_name">Projects</span>
                     </a>
-                    <a href="admin_tasks" class="nav_link">
+                    <a href="manager_tasks" class="nav_link">
                         <i class='bx bx-task nav_icon'></i>
                         <span class="nav_name">Tasks</span>
                     </a>
