--- a/src/main/webapp/assets/css/cards.css
+++ b/src/main/webapp/assets/css/cards.css
@@ -21,10 +21,7 @@
   border-radius: 10px;
 }
 #cards_landscape_wrap-2 .card-flyer .image-box img {
-  -webkit-transition: all 0.9s ease;
-  -moz-transition: all 0.9s ease;
-  -o-transition: all 0.9s ease;
-  -ms-transition: all 0.9s ease;
+  transition: all 0.9s ease;
   width: 100%;
   height: 200px;
 }
