--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -262,14 +262,14 @@
     <div class="floating-container">
         <div class="floating-button" id="addProject">+</div>
     </div>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="assets/js/toast.js"></script>
-    <script src="assets/js/api_utility.js"></script>
-    <script src="assets/js/project_utility.js"></script>
-    <script src="assets/js/projects.js"></script>
 </body>
+<script src="assets/js/sidebar.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+<script src="assets/js/toast.js"></script>
+<script src="assets/js/api_utility.js"></script>
+<script src="assets/js/project_utility.js"></script>
+<script src="assets/js/projects.js"></script>
 
 </html>
