--- a/src/main/webapp/template/admin_tasks.html
+++ b/src/main/webapp/template/admin_tasks.html
@@ -276,6 +276,7 @@
   <script src="assets/js/toast.js"></script>
   <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+  <script src="assets/js/sidebar.js"></script>
   <script src="assets/js/api_utility.js"></script>
   <script src="assets/js/tasks.js"></script>
   <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
