--- a/src/main/webapp/template/employee.html
+++ b/src/main/webapp/template/employee.html
@@ -161,5 +161,6 @@
 <script src="assets/js/employee.js"></script>
 <script src="assets/js/jquery/jquery.min.js"></script>
 <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+<script src="assets/js/sidebar.js"></script>
 
 </html>
