--- a/src/main/webapp/template/employee_projects.html
+++ b/src/main/webapp/template/employee_projects.html
@@ -94,5 +94,6 @@
 <script src="assets/js/project_utility.js"></script>
 <script src="assets/js/jquery/jquery.min.js"></script>
 <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+<script src="assets/js/sidebar.js"></script>
 
 </html>
