--- a/src/main/webapp/template/employee_tasks.html
+++ b/src/main/webapp/template/employee_tasks.html
@@ -248,6 +248,7 @@
   <script src="assets/js/toast.js"></script>
   <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+  <script src="assets/js/sidebar.js"></script>
   <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
   <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
   <script src="assets/js/api_utility.js"></script>
