--- a/src/main/webapp/template/manager_projects.html
+++ b/src/main/webapp/template/manager_projects.html
@@ -47,22 +47,26 @@
   <div class="l-navbar" id="nav-bar">
     <nav class="nav">
       <div>
-        <a href="employee" class="nav_logo">
+        <a href="manager" class="nav_logo">
           <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
           <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
           <span class="nav_logo-name">
             Projects
           </span>
         </a>
-        <div class="nav_list"> <a href="employee" class="nav_link">
+        <div class="nav_list"> 
+          <a href="manager" class="nav_link">
             <i class='bx bx-grid-alt nav_icon'></i>
             <span class="nav_name">Dashboard</span>
           </a>
-          <a href="employee_projects" class="nav_link active">
+          <a href="manager_users" class="nav_link">
+            <i class='bx bx-user nav_icon'></i>
+            <span class="nav_name">Users</span> </a>
+          <a href="manager_projects" class="nav_link active">
             <i class='bx bx-briefcase nav_icon'></i>
             <span class="nav_name">Projects</span>
           </a>
-          <a href="employee_tasks" class="nav_link">
+          <a href="manager_tasks" class="nav_link">
             <i class='bx bx-task nav_icon'></i>
             <span class="nav_name">Tasks</span>
           </a>
@@ -109,6 +113,35 @@
   </div>
   <div class="clearfix"></div>
   <br />
+      <div hidden id="members">
+        <div class="popover-heading" id="heading"></div>
+        <div class="popover-body">
+          <div class="row mb-3">
+            <div class="col-6">
+              <button class="btn btn-primary" id="editBtn" pid="" style="width:100%">Edit</button>
+            </div>
+            <div class="col-6">
+              <button class="btn btn-danger" id="deleteBtn" pid="" style="width:100%">Delete</button>
+            </div>
+          </div>
+          <div id="popMembers">
+            <div class="form-group has-search mb-3">
+              <span class="fa fa-search form-control-search"></span>
+              <input type="text" class="form-control" onkeyup="myFunction(this)" placeholder="Search">
+            </div>
+      
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3 class="panel-title">Members</h3>
+              </div>
+              <div class="panel-body">
+                <ul class="list-group" id="memberList"></ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
   <div>
     <div id="cards_landscape_wrap-2">
       <div class="container">
@@ -254,6 +287,7 @@
 </body>
 <script src="assets/js/toast.js"></script>
 <script src="assets/js/project_utility.js"></script>
+<script src="assets/js/sidebar.js"></script>
 <script src="assets/js/jquery/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
