Tasks Optimized Add Action in single servlet

--- a/src/main/webapp/template/admin_users.html
+++ b/src/main/webapp/template/admin_users.html
@@ -147,6 +147,7 @@
                                 <option value="admin">Admin</option>
                             </select>
                         </div>
+                        <small id="error" class="form-text" style="color:red"></small>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">
