--- a/src/main/webapp/template/manager_tasks.html
+++ b/src/main/webapp/template/manager_tasks.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/toast.css" />
   <link rel="stylesheet" href="assets/css/loader.css" />
+  <link rel="stylesheet" href="assets/css/modal.css" />
   <link rel="stylesheet" href="assets/css/floatButton.css" />
   <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
   <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
@@ -83,6 +84,9 @@
   </div>
   <div class="clearfix"></div>
   <br />
+  <button class="btn btn-primary" id="createBtn" data-toggle="modal" data-target="#formModal">
+    <i class="fa fa-add"></i> Create Task
+  </button>
   <div class="row" style="margin-right:0px">
     <div class="mt-3 col-md-12 animated edit-container" id="tableSize">
       <table id="tasksTable" class="table  table-striped table-bordered" style="border: right 0 !important;"
@@ -267,17 +271,17 @@
       </div>
     </div>
   </div>
-  <div class="floating-container">
+  <!-- <div class="floating-container">
     <div class="floating-button" id="createBtn" data-toggle="modal" data-target="#formModal">
       +
     </div>
-  </div>
+  </div> -->
   <script src="assets/js/toast.js"></script>
   <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="assets/js/sidebar.js"></script>
-  <script src="assets/js/api_utility.js"></script>
-  <script src="assets/js/mtasks.js"></script>
+  <script src="assets/js/tasks_utility.js"></script>
+  <script src="assets/js/tasks_api.js"></script>
   <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
   <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
 </body>
