--- a/src/main/webapp/template/manager_projects.html
+++ b/src/main/webapp/template/manager_projects.html
@@ -286,11 +286,12 @@
 
 </body>
 <script src="assets/js/toast.js"></script>
-<script src="assets/js/project_utility.js"></script>
 <script src="assets/js/sidebar.js"></script>
 <script src="assets/js/jquery/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="assets/js/mprojects.js"></script>
+integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="assets/js/projects.js"></script>
+<script src="assets/js/project_utility.js"></script>
+<script src="assets/js/project_api.js"></script>
 
 </html>
